15112018
- edit tabel mona_client
	ALTER TABLE `mona_client`
	ADD COLUMN `CLIENT_PICNAME` CHAR(200) NULL DEFAULT NULL AFTER `CLIENT_NAME`,
	ADD COLUMN `CLIENT_LOCATION` CHAR(200) NULL DEFAULT NULL AFTER `CLIENT_PICNAME`,
	ADD COLUMN `CLIENT_PHONE` CHAR(200) NULL DEFAULT NULL AFTER `CLIENT_LOCATION`,
	ADD COLUMN `CLIENT_MAIL` CHAR(200) NULL DEFAULT NULL AFTER `CLIENT_PHONE`;
- edit mona_history_client
	ALTER TABLE `mona_history_client`
	ADD COLUMN `HISCL_VALUE` DECIMAL(10,2) NULL DEFAULT NULL AFTER `HISCL_DATEEND`;
13112018
- Create tabel mona_client
CREATE TABLE `mona_client` (
	`CLIENT_ID` INT NOT NULL AUTO_INCREMENT,
	`CLIENT_NAME` CHAR(200) NULL,
	`CLIENT_INFO` VARCHAR(1024) NULL,
	`CLIENT_DTSTS` CHAR(1) NULL,
	PRIMARY KEY (`CLIENT_ID`)
)
COLLATE='latin1_swedish_ci'
ENGINE=InnoDB
;
- Create tabel mona_history_client
CREATE TABLE `mona_history_client` (
	`HISCL_ID` INT NOT NULL AUTO_INCREMENT,
	`CLIENT_ID` INT NULL,
	`PROD_ID` INT NULL,
	`HISCL_DATESTART` DATE NULL,
	`HISCL_DATEEND` DATE NULL,
	PRIMARY KEY (`HISCL_ID`)
)
COLLATE='latin1_swedish_ci'
ENGINE=InnoDB
;
	ALTER TABLE `mona_history_client`
	ADD CONSTRAINT `FK_mona_history_client_mona_client` FOREIGN KEY (`CLIENT_ID`) REFERENCES `mona_client` (`CLIENT_ID`),
	ADD CONSTRAINT `FK_mona_history_client_mona_product` FOREIGN KEY (`PROD_ID`) REFERENCES `mona_product` (`PROD_ID`);

23102018
- edit tabel mona_product
	ALTER TABLE `mona_product`
	ADD COLUMN `PROD_LOCRENTDUE` DATE NULL DEFAULT NULL AFTER `PROD_RENTDUE`;
22102018
- Tabel baru
CREATE TABLE `mona_blogcategories` (
	`BLOGCTG_ID` INT NOT NULL,
	`BLOGCTG_NAME` VARCHAR(1024) NULL,
	`BLOGCTG_DTSTS` CHAR(1) NULL,
	PRIMARY KEY (`BLOGCTG_ID`)
)
COLLATE='latin1_swedish_ci'
ENGINE=InnoDB
;
	ALTER TABLE `mona_blogcategories`
	CHANGE COLUMN `BLOGCTG_ID` `BLOGCTG_ID` INT(11) NOT NULL AUTO_INCREMENT FIRST;
- Edit tabel blog
	ALTER TABLE `mona_blog`
	ADD COLUMN `BLOGCTG_ID` INT(11) NOT NULL DEFAULT '0' AFTER `BLOG_ID`,